  converted to lowercase.
- Changed cache so that cache never expires if timeout is 0. This also fixes
  an issue with redis setex (issue ``#550``)
- Werkzeug now assumes ``UTF-8`` as filesystem encoding on Unix if Python
  detected it as ASCII.
- New optional `has` method on caches.
- Fixed various bugs in `parse_options_header` (pull request ``#643``).

Version 0.10.5
--------------

(bugfix release, release date yet to be decided)

- Reloader: Correctly detect file changes made by moving temporary files over
  the original, which is e.g. the case with PyCharm (pull request ``#722``).
- Fix bool behavior of ``werkzeug.datastructures.ETags`` under Python 3 (issue
  ``#744``).

Version 0.10.4
--------------

(bugfix release, released on March 26th 2015)

- Re-release of 0.10.3 with packaging artifacts manually removed.

Version 0.10.3
--------------

(bugfix release, released on March 26th 2015)

- Re-release of 0.10.2 without packaging artifacts.

Version 0.10.2
--------------

(bugfix release, released on March 26th 2015)

- Fixed issue where ``empty`` could break third-party libraries that relied on
  keyword arguments (pull request ``#675``)
- Improved ``Rule.empty`` by providing a ```get_empty_kwargs`` to allow setting
  custom kwargs without having to override entire ``empty`` method. (pull
  request ``#675``)
- Fixed ```extra_files``` parameter for reloader to not cause startup
  to crash when included in server params
- Using `MultiDict` when building URLs is now not supported again. The behavior
  introduced several regressions.
- Fix performance problems with stat-reloader (pull request ``#715``).

Version 0.10.1
--------------

(bugfix release, released on February 3rd 2015)

- Fixed regression with multiple query values for URLs (pull request ``#667``).
- Fix issues with eventlet's monkeypatching and the builtin server (pull
  request ``#663``).

Version 0.10
------------

Released on January 30th 2015, codename Bagger.
